# digitabokin-vibecode

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 01_create_users_table.sql  02_create_invitations_tables.sql  03_create_rsvp_responses_table.sql  04_create_payments_table.sql
backend/src/: config.rs  errors.rs  main.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: design_state.rs  invitation.rs  mod.rs  payment.rs  rsvp_response.rs  template.rs  user.rs
backend/src/routes/: auth.rs  guest_view.rs  invitations.rs  mod.rs  payments.rs  rsvp.rs  templates.rs
backend/src/services/: auth_service.rs  invitation_service.rs  mod.rs  payment_service.rs
docs/: 00_PROJECT_OVERVIEW.md  01_BACKEND_RUST_SPEC.md  02_FRONTEND_REACT_SPEC.md  03_DATABASE_SCHEMA.md  04_BUSINESS_LOGIC_FLOWS.md  05_DEPLOYMENT_INFRA.md  06_DEV_RULES_GOTCHAS.md
